# instagram-audit

./: .gitignore  DEMO_COMPLETE.md  DEPLOYMENT_COMPLETE.md  EXAMPLE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.txt  pyproject.toml
dashboard/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/sync/: route.ts
dashboard/app/sync/: page.tsx
dashboard/components/: Dashboard.tsx  DatabaseUpload.tsx
demo/: create_sample_export.py
demo/sample-export-week1/connections/followers_and_following/: followers_1.json  following.json
demo/sample-export-week2/connections/followers_and_following/: followers_1.json  following.json
docs/plans/: 2026-01-13-cloud-sync-design.md
src/instagram_audit/: __init__.py  cli.py
src/instagram_audit/collectors/: __init__.py  base.py  export_ingest.py  graph_api.py  instaloader_collector.py
src/instagram_audit/core/: __init__.py  types.py
src/instagram_audit/diff/: __init__.py  engine.py
src/instagram_audit/report/: __init__.py  cli.py  html.py
src/instagram_audit/storage/: __init__.py  dao.py  schema.py
src/instagram_audit/sync/: __init__.py  client.py  crypto.py
src/instagram_audit/verify/: __init__.py  queue.py
tests/: __init__.py  test_diff.py  test_export_ingest.py  test_rename_cases.py  test_workflow.py
